--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ concurrency:
 
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: ubuntu-24.04-arm
     environment: ${{ inputs.environment }}
     steps:
       - name: Checkout
