--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Commit
         id: commit
-        run: echo 'message=$(git log -1 --pretty=%B)' >> $GITHUB_OUTPUT
+        run: echo "message=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
 
       - name: Python
         id: python
