--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
           workspace: ${{ env.TF_WORKSPACE }}
           configuration_version: ${{ steps.configuration.outputs.configuration_version_id }}
           plan_only: ${{ !inputs.apply }}
+          message: '[${{ github.ref_name }}] ${{ steps.commit.outputs.message }}'
 
       - name: Output
         uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.3.2
