--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # terraform
+.terraform
 **/.terraform/*
 *.tfstate
 *.tfstate.*
@@ -13,6 +14,7 @@ override.tf.json
 .terraform.tfstate.lock.info
 .terraformrc
 terraform.rc
+.terraform.lock.hcl
 
 # python
 .venv
